payment-fe-cip.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-fe-service     # Name of the service
spec:
  selector:
    app: payment-fe            # Selects pods with the label `app: golang-be`
  ports:
    - protocol: TCP
      port: 3000               # Port on which the service will listen
      targetPort: 3000         # Port on the backend pods
  type: ClusterIP              # Type of the service (ClusterIP)
